# BlackBoxTT

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt
bblib/: CMakeLists.txt  Color.h  ExplorerKnownFolders.h  ScopeGuard.h  SpinLock.h  bbassert.h  bblib.h  bbregex.h  bbstring.h  codecvt.h  logging.cpp  logging.h  paths.h  platform_win.h  utils_explorer_desktop.h  utils_file.h  utils_paths.h  wcslcpy.h
bblibcompat/: CMakeLists.txt  StyleItem.h  StyleStruct.h  bbImage.cpp  bbImage.h  bbPlugin.cpp  bbPlugin.h  bbSettings.cpp  bbSettings.h  bblibcompat.cpp  bblibcompat.h  bbrc.cpp  bbrc.h  colors.cpp  colors.h  iminmax.h  memory.h  styleprops.cpp  styleprops.h  tinylist.h  utils.h  utils_string.h  winutils.cpp  winutils.h
bbproto/: CMakeLists.txt  Header.h  bbproto.asn1  decoder.h  decoder_alloc.cpp  encoder.cpp  encoder.h  mkOctetString.h
bbproto/asn.1/: BB32WMMsg.c  BB32WMMsg.h  BBHwndMsg.c  BBHwndMsg.h  BIT_STRING.c  Command.c  Command.h  INTEGER.c  asn_codecs_prim.c  asn_codecs_prim.h  asn_system.h  ber_tlv_length.h  constr_CHOICE.c  constr_SEQUENCE.c  constr_SEQUENCE.h  constraints.c  xer_decoder.c
bbproto/cmake/: asn1c.cmake  bbprotoConfig.cmake
blackbox/: BlackBox.cpp  BlackBox.def  BlackBox.h  BlackBoxConfig.cpp  BlackBoxConfig.h  BlackBox_binds.cpp  BlackBox_broams.cpp  BlackBox_compat.cpp  BlackBox_compat.h  BroamServer.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  DesktopWallpaper.cpp  DesktopWallpaper.h  DesktopWallpaperConfig.h  DesktopWallpaperConfig_yaml.cpp  Explorer.cpp  Explorer.h  ExplorerConfig.h  ExplorerConfig_yaml.cpp  ExplorerItem.h  GfxConfig.h  GfxConfig_yaml.cpp  TaskConfig.h  TaskInfo.h  Tasks.cpp  Tasks.h  TasksConfig.h  TasksConfig_yaml.cpp  Tray.cpp  Tray.h  TrayConfig.h  TrayConfig_yaml.cpp  VirtualDesktopManager.cpp  VirtualDesktopManager.h  WidgetConfig.h  WidgetConfig_yaml.cpp  WidgetConfig_yaml.h  Widgets.cpp  (+20 more)
blackbox/bind/: bind.cpp  bind.h  bind.swg
blackbox/cmd/: Commands.h  Workspaces.cpp  bbMessages.cpp
blackbox/gfx/: DX11.cpp  Gfx.cpp  Gfx.h  GfxWindow.cpp  GfxWindow.h  Gui.cpp  Gui.h  GuiWidget.h  IconCache.cpp  IconCache.h  IconId.h  MenuWidget.cpp  MenuWidget.h  imgui.h  utils_gdi.h  utils_imgui.h  utils_widgets.h
blackbox/gfx/ImGui/: DX11.cpp  DX11.h  Gfx.cpp  Gfx.h  GfxWindow.cpp  GfxWindow.h  Gui.cpp  Gui.h  IconCache.cpp  IconCache.h  utils_gui.h  utils_imgui.h
blackbox/gfx/nuklear/: Gfx.cpp  Gfx.h  Gui.cpp  Gui.h  nuklear.cpp  utils_gui.h
blackbox/gfx/shared/: DX11.cpp  DX11.h  Gfx.cpp  Gfx.h  GfxWindow.cpp  GfxWindow.h  IconCache.cpp  IconCache.h
blackbox/hooks/: CMakeLists.txt  shellhook.cpp  shellhook.h  taskhook.cpp  taskhook.h  trayhook.cpp  trayhook.h
blackbox/hooks/32on64/: CMakeLists.txt  blackbox32.cpp
blackbox/menu/: Menu.cpp  Menu.h  MenuConfig.cpp  MenuConfig.h  MenuConfig_yaml.cpp  MenuConfig_yaml.h
blackbox/net/: CMakeLists.txt  Command.h  ResponseQueue.cpp  ResponseQueue.h  Server.cpp  Server.h  ServerConfig.h  Session.cpp  Session.h  SessionQueue.h  bbcli.cpp  commands.cpp  commands.h
blackbox/plugin/: MessageManager.cpp  PluginConfig.h  PluginLoaderNative.cpp  PluginLoaderNative.h  PluginManager.cpp  PluginManager.h  PluginsConfig.h  PluginsConfig_yaml.cpp  Types.h  bb.h  plugin.h
blackbox/scheme/: CMakeLists.txt  Scheme.cpp  Scheme.h  SchemeConfig.h
blackbox/widgets/: ControlPanel.cpp  ControlPanel.h  ControlPanelWidget.cpp  ControlPanelWidget.h  Debug.cpp  Debug.h  DebugWidget.cpp  DebugWidget.h  MenuWidget.cpp  MenuWidget.h  Pager.cpp  Pager.h  PagerWidget.cpp  PagerWidget.h  Plugins.cpp  Plugins.h  PluginsWidget.h  QuickBarWidget.cpp  QuickBarWidget.h  RecoverWindowsWidget.cpp  RecoverWindowsWidget.h  StyleEditor.cpp  StyleEditor.h  StyleEditorWidget.cpp  StyleEditorWidget.h  Tasks.cpp  Tasks.h  TasksWidget.cpp  TasksWidget.h  Tray.cpp  TrayWidget.cpp  TrayWidget.h
crazyrc/: CMakeLists.txt  bbversion.h  color.h  crazyrc.h  index.cpp  main.cpp  rc.cpp  rc.h  rc_cache.cpp  rc_cache.h  rc_dump.h  rc_generate.cpp  rc_grammar.h  rc_index.cpp  rc_index.h  rc_parser.cpp  rc_parser.h  rc_types.h  rgb_txt_parser.cpp  rgb_txt_parser.h  rgbtxt_dump.h  styleitem.h  unicode.h  utils_file.h
crazyrc/test/: test.rc
plugins/: CMakeLists.txt
plugins/bbAnalog/: CMakeLists.txt  bbAnalog.cpp
plugins/bbFoomp/: CMakeLists.txt  bbFoomp.htm  bbfoomp.rc
plugins/bbFoomp/src/: bbfoomp.cpp  bbfoomp.h  changelog.txt  foobar2000.cpp  foompbutton.cpp  foompbutton.h  settings.cpp  settings.h  styles.cpp  styles.h
plugins/bbIconBox/: CMakeLists.txt  LoadFolder.cpp  Utils.cpp  bbIconBox+.cpp  bbIconBox.cpp  bbIconBox.h  bbIconBox.rc  bbIconBox.rc_mojmir  resource.aps  winlist.cpp
plugins/bbInterface/: CMakeLists.txt  Readme_kazmix.txt  Readme_kazmix_ja.txt  bbinterface.rc
plugins/bbInterface/kazmix_samplescript/: itunesModule.rc  sysmeterModule.rc
plugins/bbInterface/src/: AgentMaster.cpp  AgentMaster.h  AgentType_AutoScaleGraph.cpp  AgentType_AutoScaleGraph.h  AgentType_Bitmap.cpp  AgentType_Bitmap.h  AgentType_Broam.cpp  AgentType_Broam.h  AgentType_Clock.cpp  AgentType_Clock.h  AgentType_CompoundText.cpp  AgentType_CompoundText.h  AgentType_DiskSpaceMonitor.cpp  AgentType_DiskSpaceMonitor.h  AgentType_Graph.cpp  AgentType_Graph.h  AgentType_Mixer.cpp  AgentType_Mixer.h  AgentType_Mixer_Vista.cpp  AgentType_Mixer_Vista.h  AgentType_Mixer_XP.cpp  AgentType_Mixer_XP.h  AgentType_NetworkMonitor.cpp  AgentType_NetworkMonitor.h  (+54 more)
plugins/bbLua/: CMakeLists.txt  bbLua.cbp  bblua.cpp  bblua.h  bblua.lua  bbplugin.cpp  functions.cpp  functions.h  main.cpp  makefile  readme.txt  test.lua  winamp.lua
plugins/bbPager/: BBPager.html  CMakeLists.txt  Drawing.cpp  Drawing.h  Settings.cpp  Settings.h  bbPager.cpp  bbPager.h  bbPager_private.h  bbPager_private.rc  bbpager.bb  makefile
plugins/bbSDK/: CMakeLists.txt  bbSDK.cpp
plugins/bbSlit/: CMakeLists.txt  bbSlit.cpp
tests/rc/: ALL.rc  CMakeLists.txt  rgb.txt
tests/s7/: CMakeLists.txt  test.cpp
tools/menu/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  bbmenu.cpp
tools/net/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  bbcli.cpp
(+36 files in other folders)
