add_subdirectory(bbSlit)
add_subdirectory(bbSDK)
add_subdirectory(bbAnalog)
#add_subdirectory(bbAnalogExMod)
add_subdirectory(bbFoomp)
#add_subdirectory(bbIconBox)
#add_subdirectory(bbInterface)
#add_subdirectory(bbLeanSkin)
#add_subdirectory(bbLua)
#add_subdirectory(bbPager)
#add_subdirectory(bbPlugin)
#add_subdirectory(bbSkinD2D)

if (OPTION_USE_TCL)
#add_subdirectory(bbTcl)
endif(OPTION_USE_TCL)

